Fix crash on exit when collection scan has been aborted.

Crash was caused by dangling pointer. QPointer to the rescue.

BUG: 176870

svn path=/trunk/extragear/multimedia/amarok/; revision=911001